# ticketsForFootball

./:  .env.example  .env  .gitignore  Procfile  README.md  config.py  docker-compose.yml  migrate.py  pyproject.toml  pytest.ini  requirements.txt  security.py  start.sh  teste_ticketfootball.db
migrations/: env.py
migrations/versions/: 04fd4dfb5a71_ticket_model_sector_table_added.py  0a42bb079049_add_new_login.py  0b07a7a44b44_add_field_user_in_event_service_table.py  0eecc7650f25_add_login_permission_and_permission_.py  17541cec02a2_add_login_permission_and_permission_.py  32f537f7c538_add_autoincrement_to_sector_id.py  44463152b862_add_event_service_table.py  4c659880c1c1_add_event_service_table.py  7fb1b120941e_add_tests_database.py  818fff63ec99_change_primary_key_in_login_table_and_.py  9d048ade81d5_fixing_primary_key_problem.py  ab495e3f874e_create_event_service_table.py  bc7e96a0de13_ticket_model_table_changed_the_primary_.py  c43a508aa6ea_initial_tables.py  e79336eb4530_add_login_table.py
src/: config.py  database.py  main.py
src/controllers/: event_service.py  login.py  login_permission.py  permission_type.py  sector.py  ticket_model.py
src/models/: __init__.py  event_service.py  login.py  login_permission.py  permission_type.py  sector.py  ticket_model.py
src/schemas/: event_service.py  login.py  login_permission.py  permission_type.py  sector.py  ticket_model.py
src/services/: event_service.py  login.py  login_permission.py  permission_type.py  sector.py  ticket_model.py
src/utils/: helper.py  validators.py
src/views/: event_service.py  login.py  login_permission.py  permission_type.py  (+2 more)
tests/: conftest.py
(+5 files in other folders)
