[tool.poetry]
package-mode = false

[project]
name = "ticketsforfootball"
version = "0.1.0"
description = "ticketsforfootball"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Rodrigo Kennes", email = "rodrigo.kennes@gmail.com"}
]

dependencies = [
  "fastapi",
  "uvicorn[standard]>=0.35.0,<0.36.0",
  "databases[aiosqlite]>=0.9.0,<0.10.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "sqlalchemy>=2.0.41,<3.0.0",
  "alembic>=1.16.4,<2.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "pyjwt>=2.10.1,<3.0.0",
  "python-decouple>=3.8,<4.0",
  "asyncpg>=0.30.0,<0.31.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.1.0",
  "httpx>=0.28.1",
  "pytest-mock>=3.14.1"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
